# plugin-freedom-system

./: .continue-here.md  .gitignore  CLAUDE.md  CMakeLists.txt  LATERAL-THINKING-ANALYSIS.md  PLUGINS.md  SYSTEM-AUDIT-REPORT.md  WORKFLOW-COMPARISON.md
.claude/: CLAUDE.md  settings.local.json
.claude/aesthetics/: manifest.json
.claude/aesthetics/Analog GUI Kit 01 - Julian Behrens/: Knob_Bundle_Licence.txt
.claude/aesthetics/redshift-industrial-metal/: aesthetic.md  metadata.json  preview.html
.claude/aesthetics/redshiftdistortion_html/: README.md  index.html  red-shift-plugin.html
.claude/aesthetics/redshiftdistortion_html/src/imports/: RedShiftPlugIn.tsx
.claude/agents/: dsp-agent.md  research-planning-agent.md
.claude/commands/: continue.md  implement.md
.claude/skills/: TEST-SKILL-README.md  test-skill-md.sh
.claude/skills/context-resume/: SKILL.md  SKILL.md.backup-20251110-173659
.claude/skills/context-resume/references/: context-parsing.md  continuation-routing.md  error-recovery.md  handoff-location.md
.claude/skills/deep-research/: SKILL.md
.claude/skills/plugin-improve/: SKILL.md
.claude/skills/plugin-improve/references/: handoff-protocols.md
.claude/skills/plugin-planning/: SKILL.md
.claude/skills/plugin-planning/assets/: architecture-template.md  plan-template.md
.claude/skills/plugin-planning/references/: stage-0-research.md  stage-1-planning.md
.claude/skills/plugin-testing/assets/: decision-menu-templates.md
.claude/skills/plugin-workflow/: SKILL.md
.claude/skills/plugin-workflow/assets/: continue-here-template.md  plan.md
.claude/skills/plugin-workflow/references/: stage-2-foundation-shell.md  stage-3-dsp.md  stage-4-gui.md  stage-5-validation.md  stage-6-validation.md  state-management.md
.claude/skills/troubleshooting-docs/: SKILL.md
.claude/skills/ui-mockup/: SKILL.md
implementation-notes/: design-sync-refactor-analysis.md
plugins/AngelGrain/: .continue-here.md
plugins/AutoClip/.ideas/mockups/: v6-ui-test.html  v6-ui.yaml
plugins/DriveVerb/: .continue-here.md
plugins/DriveVerb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
plugins/DriveVerb/Source/ui/public/: index.html
plugins/FlutterVerb/: .continue-here.md  CMakeLists.txt
plugins/FlutterVerb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/GainKnob/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/GainKnob/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
plugins/GainKnob/ui/public/: index.html
plugins/LushPad/: .continue-here.md
plugins/LushPad/Source/: PluginProcessor.cpp  PluginProcessor.h
plugins/LushVerb/: .continue-here.md
plugins/LushVerb/.ideas/: architecture.md
plugins/LushVerb/Source/ui/public/: index.html
plugins/MinimalKick/: CMakeLists.txt
plugins/MinimalKick/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/OrganicHats/: CMakeLists.txt
plugins/OrganicHats/Source/: HiHatVoice.cpp  HiHatVoice.h  PluginProcessor.cpp  PluginProcessor.h
plugins/RedShiftDistortion/: .continue-here.md  .phase-2-3-report.json  CMakeLists.txt  NOTES.md
plugins/RedShiftDistortion/.ideas/: HANDJET_FONT_FIX_REPORT.md  MIGRATION-PLAN.md  PHASE1_GUI_REPORT.md  architecture.md  creative-brief.md  gui-agent-report.json  parameter-spec-draft.md  parameter-spec.md  phase-2.1-report.json  phase-2.1-summary.md  phase-2.2-report.json  phase-2.2-summary.md  phase-2.3-report.json  phase-2.3-summary.md  phase2-completion-report.md  plan.md  sub-knob-resize-diagram.txt  sub-knob-resize-report.md
plugins/RedShiftDistortion/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v10-ui-test.html  v10-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-ui-test.html  v3-ui.yaml  v4-ui-test.html  v4-ui.yaml  v5-ui-test.html  v5-ui.yaml  v6-CMakeLists.txt  v6-PluginEditor.cpp  v6-PluginEditor.h  v6-integration-checklist.md  v6-ui.html  v6-ui.yaml  v7-ui-test.html  v7-ui.yaml  v8-ui-test.html  v8-ui.yaml  v9-ui-test.html  v9-ui.yaml  validate_layout.sh  validate_v5.sh  validate_webview_v5.sh
plugins/RedShiftDistortion/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/RedShiftDistortion/Source/ui/public/: index.html  index.html.backup
plugins/RedShiftDistortion/Source/ui/public/css/: styles.css
plugins/RedShiftDistortion/Source/ui/public/js/: app.js
plugins/RedShiftDistortion/Source/ui/public/js/juce/: check_native_interop.js  index.js
plugins/Scatter/: .continue-here.md
plugins/Scatter/.ideas/: creative-brief.md
plugins/Scatter/Source/: PluginProcessor.cpp  PluginProcessor.h
plugins/TapeAge/: CHANGELOG.md
plugins/TapeAge/Source/: PluginProcessor.cpp
prompts/: 001-implement-workflow-orchestration-fixes.md
skills-audit/: aesthetic-dreaming-fixes-applied.md  build-automation-fixes-applied.md  context-resume-fixes-applied.md  deep-research-fixes-applied.md  plugin-ideation-fixes-applied.md  plugin-improve-fixes.md
troubleshooting/build-failures/: stale-build-after-stage-5-gui-changes-OrganicHats-20251112.md
troubleshooting/patterns/: juce8-critical-patterns.md
